--- a/.github/workflows/deaznam-bot-build-and-test.yml
+++ b/.github/workflows/deaznam-bot-build-and-test.yml
@@ -30,6 +30,11 @@ jobs:
         pip install flake8
         if [ -f src/requirements.txt ]; then pip install -r src/requirements.txt; fi
 
+    - name: Install ffmpeg
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ffmpeg
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
