--- a/.github/workflows/deaznam-bot-build-and-test.yml
+++ b/.github/workflows/deaznam-bot-build-and-test.yml
@@ -44,4 +44,4 @@ jobs:
 
     - name: Run unit tests
       run: |
-        python -m unittest discover -s tests -p "*_test.py"
+        python -m unittest discover -v -s tests -p "*_test.py"
